<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movie DB</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="movie_title">movie_title</string>
    <string name="movie_date">movie_date</string>
    <string name="image">image</string>
    <string name="search_text_field">Search for movie</string>
    <string name="search_button">Search</string>
    <string name="item_title">item_title</string>
    <string name="item_image">item_image</string>
    <string name="item_detail_text">item_detail_text</string>
    <string name="title_activity_movie_details">Movie details</string>
    <string name="item_detail_image">item_detail_image</string>

    <string name="item_rate">item_rate</string>
    <string name="item_date">item_date</string>
    <string name="item_description">item_description</string>
    <string name="item_likes">item_likes</string>
</resources>
